# TCResearchSolver

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: Aspect.hpp  Config.hpp  Graph.hpp  Hex.hpp  HexPosition.hpp  Node.h  Node.hpp  NodeType.hpp
include/Error/: GraphError.hpp  ParseError.hpp  SolverError.hpp
include/Solver/: AStar.hpp  DreyfusWagner.hpp  Solver.hpp
include/Structure/: Aspect.hpp  Config.hpp  Graph.hpp  Hex.hpp  Node.hpp  NodeManager.hpp  NodeType.hpp
src/: Aspect.cpp  Config.cpp  Graph.cpp  Hex.cpp  HexPosition.cpp  Node.cpp  main.cpp
src/Solver/: AStar.cpp  DreyfusWagner.cpp
src/Structure/: Aspect.cpp  Config.cpp  Graph.cpp  Hex.cpp  Node.cpp  NodeManager.cpp
test/: 3terminals.yaml  config.yaml  everything.yaml
